# dispatch-courier-seren-cloud

./: Cargo.toml  README.md  courier-plugin.json
.github/workflows/: ci.yml  release.yml
catalog/: extensions.json
src/: main.rs  parcel.rs  protocol.rs  seren_cloud_api.rs
